sorted out layout issue

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,10 +1,17 @@
 @import "bootstrap";
-body { background-color: #221e1f; /*padding-top: 90px;*/ color: #FC0 }
+body { 
+  background-color: #221e1f; 
+  /*padding-top: 90px;*/ 
+  color: #FC0 
+}
 address {
   margin-bottom: 2px;
   font-style: italic;
   font-size: 12px;
   color: #959595;
+}
+.table thead {
+  background-color: black;
 }
 .address-foot h6 {
   font-weight: normal;
@@ -56,6 +63,9 @@ nav .navbar-inner{
 .well { background-color: #343434;
   border: 1px solid #212121;
 }
+#daily-odds .well {
+  margin-top: 8px;
+}
 .navbar-inner ul {
   background-color: #221e1f;
 } 
@@ -66,6 +76,9 @@ nav .navbar-inner{
   text-shadow: none;
   font-size: 12px;
   color: #ffb733;
+}
+.nav-list > li > a:hover {
+  background-color: black;
 }
 .well {
   //padding-left: 2px;
@@ -95,9 +108,10 @@ nav .navbar-inner{
   padding-left: 10px;
 }
 #hot-bets {
-  padding-top: 1px;
+  padding-top: 3px;
   background-color: #343434;
   margin-left: 10px;
+  //margin-right: -80px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
