--- a/app/assets/stylesheets/slider.css
+++ b/app/assets/stylesheets/slider.css
@@ -45,7 +45,6 @@ blockquote	{ padding: 0 20px; margin-left: 20px; border-left: 20px solid #ccc; f
   left: 40px; 
   bottom: 2px; 
   /*just added */
-  border: 3px solid #1a1a1a;
   /*height: 331px; */
 }			
 .stripViewer .panelContainer 
